# renderer

./: .gitignore  CMakeLists.txt  ORIGINAL_REQUEST.md  PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md  VR_Engine_Development_Plan.md  build_engine.py  find_vs.py  run_simulator.bat  vcpkg.json
.github/workflows/: ci.yml
Samples/TargetShooter/: GameWorld.cpp  GameWorld.h  Main.cpp  PlayerController.cpp  PlayerController.h  TargetObject.h  TargetRotator.cpp  TargetRotator.h  TestMain.cpp
Shaders/: Common.hlsl  DefaultPS.hlsl  DefaultVS.hlsl  PixelArtToon.usf  UIShader.hlsl
Source/: Main.cpp  TestMain.cpp
Source/Asset/: AssetLoader.cpp  AssetLoader.h  TextureLoader.cpp  TextureLoader.h
Source/Audio/: AudioEngine.cpp  AudioEngine.h  AudioSource.cpp  AudioSource.h  HRTFFilter.cpp  HRTFFilter.h
Source/Core/: Component.h  Engine.cpp  Engine.h  GameObject.h  IGame.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h
Source/Game/: GameWorld.cpp  GameWorld.h  PlayerController.cpp  PlayerController.h  TargetObject.cpp  TargetObject.h  TargetRotator.cpp  TargetRotator.h
Source/Math/: Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Vector3.h
Source/Physics/: Colliders.cpp  Colliders.h  GJK_EPA.cpp  GJK_EPA.h  PhysicsEngine.cpp  PhysicsEngine.h  Rigidbody.cpp  Rigidbody.h  RigidbodyComponent.h
Source/Platform/: OpenXRManager.cpp  OpenXRManager.h  Win32Window.cpp  Win32Window.h
Source/Renderer/: ConstantBuffer.h  DX12Renderer.cpp  DX12Renderer.h  PipelineState.cpp  PipelineState.h
Source/UI/: FontRenderer.cpp  FontRenderer.h  ImmediateUI.cpp  ImmediateUI.h
Tests/: README.md  mock_engine.py  run_tests.py  visual_engine_simulator.py
Tests/Assets/: Level.gltf
